# CG-from-scratch

./: README.md
tinyraytracer/: CMakeLists.txt  main.cpp  raytrace.cpp  raytrace.h  scene.h
tinyrender/: CMakeLists.txt  main.cpp
